--- a/index.ipynb
+++ b/index.ipynb
@@ -58,7 +58,7 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def number_of_destinations():\n",
-    "    c\n",
+    "    count = \n",
     "    return travel_destinations.count()"
    ]
   },
