--- a/index.ipynb
+++ b/index.ipynb
@@ -58,8 +58,7 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def number_of_destinations():\n",
-    "    count = list.count(travel_destinations)\n",
-    "    return count"
+    "    return len()"
    ]
   },
   {
