--- a/index.ipynb
+++ b/index.ipynb
@@ -90,12 +90,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "def next_up():\n",
-    "    return travel_de"
+    "    return travel_destinations[0]"
    ]
   },
   {
