--- a/index.ipynb
+++ b/index.ipynb
@@ -217,13 +217,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
-    "    return list(travel_destinations.capitalize())"
+    "    return travel_destinations"
    ]
   },
   {
